Fixed centering issue with profile pic when small screen, and resume subsection titles. Fixed contact form spacing issue when small screen

--- a/contact.css
+++ b/contact.css
@@ -89,3 +89,23 @@
   color: var(--purple);
   font-weight: bold;
 }
+
+@media (min-width: 415px) and (max-width: 768px) {
+  .form-element label {
+    margin: 5px;
+  }
+}
+
+@media (max-width: 414px) {
+  .form-element label {
+    margin: 2px;
+  }
+
+  .form-element input {
+    width: 60%;
+  }
+
+  .btn-1 {
+    margin-bottom: 10px;
+  }
+}
